# anicli-esp

./: Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: aur-publish.yml
src/: animeav1.rs  animeav1sub.rs  animeflv.rs  app.rs  client.rs  config.rs  frontend.rs  input.rs  list.rs  logging.rs  main.rs  server.rs
