[package]
name = "anicli-esp"
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ver anime subtitulado en Español desde el terminal"
readme = "README.md"
repository = "https://github.com/Asempere123123/anicli-esp"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.43"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
headless_chrome = { version = "1.0.21", features = ["fetch"] }
lazy_static = "1.5.0"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
